Fix sidebar heading vertical alignment

--- a/Libadwaita/styles/sidebar.less
+++ b/Libadwaita/styles/sidebar.less
@@ -26,7 +26,8 @@
 	height: 34px;
 	line-height: 34px;
 	text-align: center;
-	top: 0;
+	top: 5px;
+	right: 13px;
 
 	img.content-dark {
 		background-image: none;
@@ -51,7 +52,7 @@
 .outline-view .heading {
 	font-size: @text_size;
 	color: @text_color;
-		margin-bottom: 4px;
+		margin-bottom: 10px;
 		padding-top: 12px;
 
 // 		.add-item-button {
